<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
                <ImageView
                    android:src="@drawable/commerce_logo"
                    android:layout_width="250dp"
                    android:layout_height="200dp" />
                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:gravity="center" />
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/phone"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="64dp"
                    android:text="@string/sign_up"/>

        </LinearLayout>
</RelativeLayout>