<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:src="@drawable/commerce_logo"
            android:layout_width="250dp"
            android:layout_height="200dp" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/slogan"
            android:textStyle="italic"
            android:id="@+id/textSlogan"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dp">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="18dp"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:id="@+id/btnSignUp"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="18dp"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:id="@+id/btnSignIn"
            />
    </LinearLayout>

</RelativeLayout>