<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".CartActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/noItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"
                    android:textColor="@color/purple_500"
                    android:textSize="24sp" />
            </LinearLayout>
            <Button
                android:id="@+id/placeOrderBtn"
                android:text="@string/place_order"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>